--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+api.security.token.secret=${JWT.SECRET:my-secret-key}
+
 
 # Para conexão Mysql
 
@@ -23,3 +25,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/livraria
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
