--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,27 +3,27 @@ api.security.token.secret=${JWT.SECRET:my-secret-key}
 
 # Para conexão Mysql
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/livraria
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/livraria
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.show-sql=false
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 
 # Para conexão Postgres
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:5432/livraria
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.url=jdbc:postgresql://localhost:5432/livraria
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
 
