--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
     		<artifactId>hibernate-validator</artifactId>
 		</dependency>
 
+		<dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.10</version>
+        </dependency>	
+
 
 	</dependencies>
 
